Changed design, added additional functionality

--- a/Index.html
+++ b/Index.html
@@ -2,14 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sketch-a-grid</title>
+    <title>Etch-a-sketch</title>
     <link href="css.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<h1>Sketch-a-grid</h1>
-<div id="main">
-    <button>Create a grid</button>
+<h1>Etch-a-sketch</h1>
+<div>
     <div id="container">
+    </div>
+    <div class='buttons'>
+    <button id="create">Create a grid</button>
+    <button id="black">Black mode</button>
+    <button id="rainbow">Rainbow mode</button>
     </div>
 </div>
 </body>
