--- a/Index.html
+++ b/Index.html
@@ -11,9 +11,10 @@
     <div id="container">
     </div>
     <div class='buttons'>
-    <button id="create">Create a grid</button>
-    <button id="black">Black mode</button>
-    <button id="rainbow">Rainbow mode</button>
+        <label for="myRange">
+        </label><input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+        <button id="black">Black mode</button>
+        <button id="rainbow">Rainbow mode</button>
     </div>
 </div>
 </body>
