--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,8 @@
     </div>
     <div class='buttons'>
         <label for="myRange">
-        </label><input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+        </label>
+        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
         <button id="black">Black mode</button>
         <button id="rainbow">Rainbow mode</button>
     </div>
